--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li><strong>Absolute Path:</strong> The full path starting from the root directory (e.g., `/home/user/docs/file.txt`).</li>
       <li>
         <strong>Relative Path:</strong> The path relative to the current working directory. 
-        <a href="relative-path.html">Learn more</a>
+        <a href="details.html">Learn more</a>
       </li>
     </ul>
   </div>
