--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Relative Path</title>
+  <title>Relative Path in Unix</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -26,22 +26,9 @@
       color: #0056b3;
     }
 
-    p, ul, pre, ol {
+    p, ul, ol {
       margin: 15px 0;
       line-height: 1.6;
-    }
-
-    ul, ol {
-      margin-left: 20px;
-    }
-
-    img {
-      display: block;
-      margin: 20px 0;
-      max-width: 100%;
-      height: auto;
-      border: 1px solid #ddd;
-      border-radius: 5px;
     }
 
     a {
@@ -54,13 +41,11 @@
     }
 
     .back-link {
-      display: inline-block;
-      margin-top: 20px;
       padding: 10px 15px;
       background-color: #0056b3;
-      color: #fff;
-      border-radius: 5px;
+      color: white;
       text-decoration: none;
+      border-radius: 5px;
     }
 
     .back-link:hover {
@@ -129,6 +114,7 @@ Absolute Path: /home/user/docs/file.txt</pre>
     </ol>
 
     <h3>Illustration:</h3>
+    <!-- Image Placeholder (update with your actual image path) -->
     <img src="images/cygwin-example.png" alt="Cygwin Terminal Example" width="400">
 
     <a href="index.html" class="back-link">Back to UNIX Details</a>
