--- a/index.html
+++ b/index.html
@@ -174,9 +174,32 @@
       <h2>What is a Pathname?</h2>
       <p>A pathname refers to the location of a file or directory within the file system. It can be either a relative or absolute path.</p>
 
+      <h2>Types of Pathnames</h2>
+      <ul>
+        <li><strong>Absolute Path:</strong> An absolute path refers to the complete path from the root directory, starting with a `/`. It is independent of the current working directory.</li>
+        <li><strong>Relative Path:</strong> A relative path refers to a path relative to the current working directory. It does not start with `/` and depends on where you are located in the file system.</li>
+      </ul>
+
+      <h2>Key Components in Pathname</h2>
+      <ul>
+        <li><strong>`.` (dot):</strong> Refers to the current directory.</li>
+        <li><strong>`..` (double dot):</strong> Refers to the parent directory.</li>
+        <li><strong>`~` (tilde):</strong> Refers to the home directory of the current user.</li>
+      </ul>
+
+      <h2>Steps to Find a Pathname</h2>
+      <ol>
+        <li>Identify the starting point (current working directory).</li>
+        <li>Use relative or absolute references to navigate through the file system.</li>
+        <li>Use the appropriate components (`/`, `.`, `..`, `~`) based on the context.</li>
+      </ol>
+
+      <p>For example, if your current working directory is `/home/user` and you want to navigate to `/home/user/documents`, you would use the relative path `documents`.</p>
+
       <a href="details.html" class="learn-more">Learn more about Relative Paths</a>
     </div>
   </div>
 
 </body>
 </html>
+
