--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
 
     <!-- Unix Subject Details Section -->
     <div class="container">
-      <h1>Unix Subject: Pathnames</h1>
+      <h1>Unix Programming Language</h1>
+      <h2>Subject Code: 503UNS6</h2>
+      <h3>Topic: Pathnames</h3>
+
       <p>Learn about the components of pathnames in Unix and how they are used to locate files and directories.</p>
 
       <h2>What is a Pathname?</h2>
@@ -180,8 +183,21 @@
         <li><strong>Relative Path:</strong> A relative path refers to a path relative to the current working directory. It does not start with `/` and depends on where you are located in the file system.</li>
       </ul>
 
-      
-      
+      <h2>Key Components in Pathname</h2>
+      <ul>
+        <li><strong>`.` (dot):</strong> Refers to the current directory.</li>
+        <li><strong>`..` (double dot):</strong> Refers to the parent directory.</li>
+        <li><strong>`~` (tilde):</strong> Refers to the home directory of the current user.</li>
+      </ul>
+
+      <h2>Steps to Find a Pathname</h2>
+      <ol>
+        <li>Identify the starting point (current working directory).</li>
+        <li>Use relative or absolute references to navigate through the file system.</li>
+        <li>Use the appropriate components (`/`, `.`, `..`, `~`) based on the context.</li>
+      </ol>
+
+      <p>For example, if your current working directory is `/home/user` and you want to navigate to `/home/user/documents`, you would use the relative path `documents`.</p>
 
       <a href="details.html" class="learn-more">Learn more about Relative Paths</a>
     </div>
@@ -189,4 +205,3 @@
 
 </body>
 </html>
-
