--- a/index.html
+++ b/index.html
@@ -89,9 +89,21 @@
       flex: 1; /* Ensures the content takes up equal height */
     }
 
-    h1, h2 {
+    h1 {
       color: #0056b3;
       font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      color: #0056b3;
+      font-size: 22px;  /* Reduced size of h2 */
+      margin-bottom: 8px;
+    }
+
+    h3 {
+      font-size: 20px;  /* Reduced size of h3 */
+      color: #0056b3;
       margin-bottom: 10px;
     }
 
