--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       padding: 20px 40px;
       background-color: #ffffff;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
     }
 
     .logo {
@@ -95,12 +96,12 @@
 
     h2 {
       color: #0056b3;
-      font-size: 22px;  /* Reduced size of h2 */
+      font-size: 22px;
       margin-bottom: 8px;
     }
 
     h3 {
-      font-size: 20px;  /* Reduced size of h3 */
+      font-size: 20px;
       color: #0056b3;
       margin-bottom: 10px;
     }
