--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       padding: 20px 40px;
       background-color: #ffffff;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
     }
 
     .logo {
@@ -81,7 +80,7 @@
     /* Content Section Styles for Unix Details */
     .container {
       max-width: 800px;
-      margin: 50px auto;
+      margin: 20px auto;
       padding: 20px;
       background: #fff;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -167,7 +166,7 @@
     </div>
   </header>
 
-  <!-- Unix Subject Details Section -->
+  <!-- Unix Subject Details Section (No Division, Seamless Content) -->
   <div class="container">
     <h1>Unix Programming Language</h1>
     <h2>Subject Code: 503UNS6</h2>
