--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
   <!-- Unix Subject Details Section (No Division, Seamless Content) -->
   <div class="content">
-    <h1>Unix Programming Language</h1>
-    <h2>Subject Code: 503UNS6</h2>
+    <h1>Unix System Programming</h1>
+    <h2>Subject Code: BCS515C </h2>
     <h3>Topic: Pathnames</h3>
 
     <p>Learn about the components of pathnames in Unix and how they are used to locate files and directories.</p>
